Bug 100600 - Classification toolbar doesn't work properly on Linux (LibreOffice 5.2.0 rc1)
Summary: Classification toolbar doesn't work properly on Linux (LibreOffice 5.2.0 rc1)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-25 08:12 UTC by Mike Saunders
Modified: 2016-10-25 18:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Missing Classification drop-down menu (100.26 KB, image/png)
2016-06-25 08:12 UTC, Mike Saunders
Details
User interface scaling at 90% (146.90 KB, image/png)
2016-07-07 14:11 UTC, Mike Saunders
Details
User interface scaling at 110% (168.92 KB, image/png)
2016-07-07 14:11 UTC, Mike Saunders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Saunders 2016-06-25 08:12:08 UTC
Created attachment 125895 [details]
Missing Classification drop-down menu

A new document classification toolbar has been added for LO 5.2: http://vmiklos.hu/blog/classification-toolbar.html

The drop-down list shows an example policy that is included with LibreOffice, activated via View > Toolbars > Classification.

However, with a fresh installation of LO 5.2.0 rc1 on a fresh installation of Lubuntu 16.04, the  drop-down list doesn't appear as it should. Instead, a button appears that does nothing in Writer (see attached screenshot). In Calc, the button toggles the Sidebar on and off.

In Tools > Options > Paths, Classification points to /opt/libreoffice5.2/program/../share/classification/example.xml, which is a valid path. Pointing it directly at the example.xml (ie /opt/libreoffice5.2/share/classification/example.xml) doesn't fix the problem.

Version: 5.2.0.1
Build ID: fcbcb4963bda8633ba72bd2108ca1e802aad557d
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
Locale: en-GB (en_GB.UTF-8)
Comment 1 Thomas Hackert 2016-06-25 09:41:42 UTC
Hello Mike, *,
I cannot confirm your bug with
OS: Debian Testing AMD64
LO: Version: 5.2.0.1
Build ID: fcbcb4963bda8633ba72bd2108ca1e802aad557d
CPU Threads: 4; OS Version: Linux 4.5; UI Render: default; 
Locale: de-DE (de_DE.UTF-8)
(parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux), sorry ... :(

Just out of interest: how did you install 5.2.0.0RC1? From a PPA or downloading, extracting and installing LO's tarballs (if so, how?)?
HTH
Thomas.
Comment 2 Mike Saunders 2016-06-25 11:31:27 UTC
Ah yes, I should have mentioned that I'm using the TDF build from:

http://download.documentfoundation.org/libreoffice/testing/5.2.0/deb/x86_64/LibreOffice_5.2.0.1_Linux_x86-64_deb.tar.gz

I simply installed all .debs with "dpkg -i *.deb"
Comment 3 Cor Nouws 2016-06-25 15:22:24 UTC
Works fine for me Versie: 5.2.0.1 
Build ID: fcbcb4963bda8633ba72bd2108ca1e802aad557d
CPU Threads: 2; Versie besturingssysteem:Linux 4.4; UI Render: standaard; 
Locale: nl-NL (nl_NL.UTF-8)
Comment 4 MM 2016-06-25 21:35:15 UTC
Confirmed with v5.2.0.1 under ubuntu 16.04 x64.
Confirmed with v5.2.0.1 under ubuntu 14.04 x64.

A button is shown (in white, which is hard to read), when you click on it nothing happens.
Resetting profile doesn't help.
Comment 5 Miklos Vajna 2016-06-28 07:44:18 UTC
Sorry, I can't reproduce it, not even from LibreOffice_5.2.0.1_Linux_x86-64_deb.tar.gz. Do we have an idea what's the pattern? I tested using the TDF debs on Linux x86_64 (openSUSE, KDE, but probably it doesn't matter).

(How to test debs on rpm-based systems: for i in *.deb; do ar x $i; tar xvf data.tar.gz; rm -f data.tar.gz; done)
Comment 6 Mike Saunders 2016-06-29 14:11:17 UTC
An update on this: I made a copy of /opt/libreoffice5.2/share/classification/example.xml in my home directory, and pointed LibreOffice at it (via Tools > Options > Paths). That didn't change anything, but I closed LO, removed example.xml from my home directory, and restarted LO. This weird dialog appears:

http://i.imgur.com/hIsjVBY.png

On closing it, LO crashes. Every restart of LO results in the same dialog box and crash; I had to reset the profile to fix it. Not sure if it helps but might get us closer to the root cause here...
Comment 7 Mike Saunders 2016-07-07 14:00:59 UTC
Update: this might be caused by icon themes. I just installed 5.2.0 rc2 from here: http://dev-builds.libreoffice.org/pre-releases/deb/x86_64/LibreOffice_5.2.0.2_Linux_x86-64_deb.tar.gz

on a fresh Lubuntu 16.04 installation. View > Toolbars > Classification worked this time. Everything functioned as expected.

BUT: I then changed the icon theme to Breeze, and the toolbar broke, back to showing just the "Apply Document Classification" button as in the previous reports. Switching the icon theme back to the default didn't fix it, nor did resetting the LibreOffice profile (and even uninstalling and reinstalling the .debs).

It's a very strange one. Can someone on a different distro try enabling the Classification toolbar and changing the icon theme (Tools > Options > View > Icon style) please, to see if that's definitely where the problem lies?
Comment 8 Mike Saunders 2016-07-07 14:11:09 UTC
Created attachment 126102 [details]
User interface scaling at 90%
Comment 9 Mike Saunders 2016-07-07 14:11:32 UTC
Created attachment 126103 [details]
User interface scaling at 110%
Comment 10 Mike Saunders 2016-07-07 14:12:56 UTC
OK, I can sometimes enable the proper classification toolbar by changing the User Interface Scaling option in Tools > Options > View. If I go down to 90% and then up to 110%, it sometimes shows the classification toolbar properly, but not always (see last two attachments).
Comment 11 Miklos Vajna 2016-07-08 14:44:57 UTC
Aah, it has nothing to do with icon themes, you just need to resize the LO window to be small enough, and then the bug happens. I can reproduce it now.
Comment 12 Commit Notification 2016-07-12 09:28:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8192da8e4de7a058ef95253f992f4143f83fa0f1

tdf#100600 sfx2 classification: never replace the control with label

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2016-07-18 10:02:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cf7025df7f825326ce57b4e2817ee9544f059b7&h=libreoffice-5-2

tdf#100600 sfx2 classification: never replace the control with label

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.