tdf#100600 sfx2 classification: never replace the control with label

Thanks to Caolán McNamara for pointing out where is the condition of the
replacement in VCL.

Change-Id: I7e1ef4a016a37b25e084c4c6467a42ca557069a4
Reviewed-on: https://gerrit.libreoffice.org/27133
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 8192da8e4de7a058ef95253f992f4143f83fa0f1)